# file-converters

./: README.md  pyproject.toml
HTML2PDF/: weasyprint.ipynb
Image2PDF/: PIL.ipynb
MD2HTML/: mistune.ipynb  test.md  test_html.html
PDF2Image/: fitz.ipynb  ghostscript.ipynb  pdf2image.ipynb
PDF2MD/: Docling.ipynb  Docling_TransformerXL.md  pymupdf4llm.ipynb  pymupdf4llm_TransformerXL.md
PDF2TXT/: pdfminer.ipynb  pdfminer_output.text  pdfplumber.ipynb  pdfplumber_output.txt  pymupdf.ipynb  pymupdf.txt  pypdf.ipynb  pypdf.txt
Table2CSV/: camelot.ipynb  tabula-py.ipynb
URL2TXT/: output.txt  wikipedia2txt.ipynb
