[project]
name = "fileconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.54.0",
    "ghostscript>=0.8.1",
    "huggingface-hub[hf-xet]>=0.35.0",
    "langchain-community>=0.3.29",
    "pdf2image>=1.17.0",
    "pymupdf4llm>=0.0.27",
]
