[project]
name = "fileconverter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bson>=0.5.10",
    "camelot-py>=1.0.9",
    "docling>=2.54.0",
    "ghostscript>=0.8.1",
    "huggingface-hub[hf-xet]>=0.35.0",
    "langchain-community>=0.3.29",
    "mistune>=3.1.4",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pymupdf4llm>=0.0.27",
    "tabula-py>=2.10.0",
]
